java 16 and 17 feature were present and running under jre 8